# Crystalline---Neural-ODEs-for-Transfer-Learning-of-Crystallisation-Processes

./: .gitignore  README.md  pyproject.toml
Crystalline/: __init__.py  augmented.py  augmented_domain.py  augmented_domain_learnable.py  augmented_rl.py  constrained.py  data_functions.py  latent.py  ode_mom.py
Crystalline/dash/: __init__.py  training.py
Crystalline/metrics/: calculations.py  error.py
Crystalline/plotting/: __init__.py  comparison_plots.py  loss_curves.py  plotly_plots.py
Crystalline/sr_datasets/20251020_160548/: bounds_config.json  lhs_samples.xlsx  model_config.json  training_points_tsave.xlsx
Crystalline/sr_datasets/20251020_160628/: bounds_config.json  lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/sr_datasets/20251020_160648/: bounds_config.json  lhs_samples.xlsx  training_config.json  training_points_tsave.xlsx
Crystalline/sr_datasets/20251021_080511/: lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/sr_datasets/20251021_100315/: lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/sr_datasets/20251021_101656/: lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/sr_datasets/20251021_102010/: lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/sr_datasets/20251021_103158/: lhs_samples.xlsx  training_config.json
Crystalline/sr_datasets/20251021_103829/: lhs_samples.xlsx
Crystalline/sr_datasets/20251021_104018/: lhs_samples.xlsx
Crystalline/sr_datasets/20251021_104201/: lhs_samples.xlsx
Crystalline/sr_datasets/20251021_104324/: bounds_config.json  lhs_samples.xlsx
Crystalline/sr_datasets/20251021_105414/: lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/sr_datasets/20251021_121653/: lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/sr_datasets/20251021_131229/: lhs_samples.xlsx
Crystalline/sr_datasets/20251021_131326/: lhs_samples.xlsx
Crystalline/sr_datasets/20251021_131420/: lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/sr_datasets/20251021_134837/: lhs_samples.xlsx  training_points_tsave.xlsx
Crystalline/tests/: test_calculations.py  test_failure_metrics.py  test_shapes_and_lengths.py  test_simulate_crystallisation.py
dashapp/: README_DASH_APP.md  app.py  postproc.py  sim_runner.py  training_wrapper.py
dashapp/assets/: custom-styles.css  style.css
